# research-to-backtest-p2-backtest

./: .env.example  .gitignore  .gitmodules  1804_FEEDBACK.md  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: account_registry.yaml  backtest.yaml  dart.yaml  llm.yaml  market.yaml
docs/: AI_ROLE_BOUNDARY.md  DATA_NOTES.md  HUMAN_IN_THE_LOOP.md  MILESTONES.md  OUTPUT_SCHEMA.md  PROGRESS.md  PROJECT_SPEC.md  SOLUTION_OVERVIEW.md
docs/specs/: A1-dart-identification.md  A2-financial-api-collection.md  A3-market-data.md  A4-financial-normalization.md  A5-strategy-dsl.md  A6-backtest-engine.md  B1B2-xbrl-collection-parsing.md  B3-reconciliation.md  B4-filing-versions.md  CLI-integration.md  H1-hitl-foundation.md  W3a-llm-evidence.md  W3b-candidates-strategy.md  W3c-report-ui.md  W3d-ui-data-prep.md  W3e-ui-ux.md
scripts/: sync_mirror.sh
src/research_backtest/: __init__.py
submission/: README.md  과제1_네이버_기업분석.md  과제2_AI활용_산출물설명.md
submission/evidence/: ai_usage_log.jsonl  robustness_report.json  run_state.json
submission/부록/: AI활용_상세설명.md  네이버_상세분석_원문.md  시스템생성리포트_SK하이닉스.md  시스템생성리포트_네이버.md
tests/integration/: test_backtest_run.py  test_dart_api.py  test_dart_financials.py  test_filing_versions_live.py  test_financials_build.py  test_llm_live.py  test_market_data.py  test_reconciliation.py  test_strategy_draft_live.py  test_xbrl_pipeline.py
tests/unit/: conftest.py  test_cli.py  test_cli_backtest.py  test_cli_collect_financials.py  test_cli_collect_market.py  test_cli_data_pipeline.py  test_cli_hitl.py  test_cli_report.py  test_cli_resolve_company.py  (+14 more)
(+132 files in other folders)
