[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-to-backtest"
version = "0.1.0"
description = "AI 기반 기업 리서치 및 투자전략 검증 시스템 (OpenDART · XBRL · 백테스트)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "pykrx>=1.0.45",
    "pandas>=2.2",
    "pyarrow>=17",
    # LLM (D2 재개정): Claude Agent SDK — 구독 OAuth 토큰 인증, Phase C에서 사용
    "claude-agent-sdk>=0.1",
    # HITL UI (1804 §15 — 7화면, C3')
    "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
r2b = "research_backtest.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_backtest"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# pykrx는 타입 스텁이 없다 — 타입 경계는 core/market의 어댑터에서 명시한다
module = ["pykrx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: 실제 DART API를 호출하는 테스트 (DART_API_KEY 필요, 키가 없으면 skip)",
]
